--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Revert to usage of *.gradle.kts files
 android.defaults.buildfeatures.buildconfig=false
