--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,20 @@
+# Kotlin and KSP must match. Update together.
 [versions]
-agp = "8.12.2"
+agp = "8.13.0"
 datastorePreferences = "1.1.7"
-kotlin = "2.2.10"
+kotlin = "2.2.20"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 kotlinxSerializationJson = "1.9.0"
 lifecycleRuntimeKtx = "2.9.3"
-activityCompose = "1.10.1"
-composeBom = "2025.08.01"
+activityCompose = "1.11.0"
+composeBom = "2025.09.00"
 materialIconsExtended = "1.7.8"
-navigationCompose = "2.9.3"
-roomRuntime = "2.7.2"
-ksp = "2.1.21-2.0.1"
+navigationCompose = "2.9.4"
+roomRuntime = "2.8.0"
+ksp = "2.2.20-2.0.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
